Fix Junimos not harvesting until the player visits the Ginger Island farm

--- a/Buildable Ginger Island Farm.csproj
+++ b/Buildable Ginger Island Farm.csproj
@@ -4,6 +4,7 @@
 		<AssemblyName>BuildableGingerIslandFarm</AssemblyName>
 		<Version>1.0.3</Version>
 		<TargetFramework>net6.0</TargetFramework>
+		<EnableHarmony>true</EnableHarmony>
 		<ProjectDir>$([System.IO.Path]::Combine($(MSBuildThisFileDirectory), $(ProjectName)))</ProjectDir>
 	</PropertyGroup>
 	<ItemGroup>
